--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body style="margin : 0px; overflow: hidden;">
   <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
   <div class="arjs-loader">
-    <div>Loading, please wait...</div>
+    <div>Loading, please wait...2201071724</div>
   </div>
 
   <!-- a-frame scene -->
@@ -41,18 +41,17 @@
     <!-- on 'url' use the path to the Image Descriptors created before. -->
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
-      type="nft"
-      url="https://arjs-cors-proxy.herokuapp.com/https://lelexiaotian.github.io/testarr1gu8/image/qiche"
-      smooth="true"
-      smoothCount="10"
-      smoothTolerance=".01"
-      smoothThreshold="5"
+        type="nft"
+        url="https://songgravel.github.io/static/image-tracking/nft/cart/cart"
+        smooth="true"
+        smoothCount="10"
+        smoothTolerance=".01"
+        smoothThreshold="5"
     >
-        <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
         <a-entity
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://lelexiaotian.github.io/testarr1gu8/module/qiche.gltf"
-            scale="5 5 5"
-            position="50 150 0"
+            gltf-model="https://songgravel.github.io/static/models/scene.gltf"
+            scale="0.1 0.1 0.1"
+            position="-10 -5 20"
         >
         </a-entity>
     </a-nft>
