--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>proj-ar</title><script src=https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js></script><script src=/static/scripts/aframe-ar-nft.js></script><link href=/static/css/app.50f9e6d86121fadbd0636dd9a229617b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.cedf7aaf9b0436b4ec1a.js></script><script type=text/javascript src=/static/js/app.d8d2dc5be8dcccae6089.js></script></body></html>
+<!-- import aframe and then ar.js with image tracking / location based features -->
+<script src="/static/scripts/aframe.min.js"></script>
+<script src="/static/scripts/aframe-ar-nft.js"></script>
+
+<!-- style for the loader -->
+<style>
+  .arjs-loader {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .arjs-loader div {
+    text-align: center;
+    font-size: 1.25em;
+    color: white;
+  }
+</style>
+
+<body style="margin : 0px; overflow: hidden;">
+  <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
+  <div class="arjs-loader">
+    <div>Loading, please wait...2201071741</div>
+  </div>
+
+  <!-- a-frame scene -->
+  <a-scene
+      vr-mode-ui="enabled: false;"
+      renderer="logarithmicDepthBuffer: true;"
+      embedded
+      arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+  >
+      <a-nft
+          type="nft"
+          url="https://songgravel.github.io/static/image-tracking/nft/cart/cart"
+          smooth="true"
+          smoothCount="10"
+          smoothTolerance=".01"
+          smoothThreshold="5"
+      >
+          <a-entity
+              gltf-model="https://songgravel.github.io/static/models/scene.gltf"
+              scale="1 1 1"
+              position="-10 -5 20"
+          >
+          </a-entity>
+      </a-nft>
+      <a-entity camera></a-entity>
+  </a-scene>
+</body>
