--- a/three.js/examples/minimal_ES6.html
+++ b/three.js/examples/minimal_ES6.html
@@ -16,7 +16,7 @@
 	//		Init
 	//////////////////////////////////////////////////////////////////////////////////
 
-    const cameraParam = "../../static/data/data/camera_para.dat"
+    const cameraParam = "../../data/data/camera_para.dat"
     var arToolkitSource, arToolkitContext;
 
 	// init renderer
