--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -159,7 +159,7 @@
         // init controls for camera
         var markerControls = new THREEx.ArMarkerControls(arToolkitContext, camera, {
             type : 'nft',
-            descriptorsUrl : 'https://songgravel.github.io/static/data/dataNFT/pinball',// 'data/dataNFT/pinball',
+            descriptorsUrl : 'data/dataNFT/pinball',
             changeMatrixMode: 'cameraTransformMatrix'
         })
 
