--- a/aframe/examples/image-tracking/nft/index.html
+++ b/aframe/examples/image-tracking/nft/index.html
@@ -36,12 +36,12 @@
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
         <a-nft
-            type='nft' url='./aframe/examples/image-tracking/nft/trex/trex-image/trex'
+            type='nft' url='./data/dataNFT/pinball'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='./trex/scene.gltf'
-                scale="5 5 5"
-                position="150 300 -100"
+                gltf-model='./Flamingo.glb'
+                scale="1 1 1"
+                position="100 100 -200"
                 >
             </a-entity>
         </a-nft>
