--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -179,11 +179,11 @@
             model = gltf.scene.children[0];
             model.name = 'Flamingo';
 
-            var animation = gltf.animations[0];
-            var mixer = new THREE.AnimationMixer(model);
-            mixers.push(mixer);
-            var action = mixer.clipAction(animation);
-            action.play();
+            //var animation = gltf.animations[0];
+            //var mixer = new THREE.AnimationMixer(model);
+            //mixers.push(mixer);
+            //var action = mixer.clipAction(animation);
+            //action.play();
 
             root.matrixAutoUpdate = false;
             root.add(model);
@@ -191,7 +191,7 @@
             model.position.z = -200;
             model.position.x = 100;
             model.position.y = 100;
-            model.rotation.x = -60;
+            //model.rotation.x = -60;
 
 
             //////////////////////////////////////////////////////////////////////////////////
