--- a/three.js/examples/minimal_ES6.html
+++ b/three.js/examples/minimal_ES6.html
@@ -3,6 +3,8 @@
 <link rel="import" href="resources/index.css">
 <!-- three.js library -->
 <script src='vendor/three.js/build/three.min.js'></script>
+<!-- three.js load GLTF -->
+<script src='vendor/three.js/GLTFLoader.js'></script>
 <!-- ar.js -->
 <script src="../build/ar-threex.js"></script>
 <script>THREEx.ArToolkitContext.baseURL = '../'</script>
@@ -197,6 +199,7 @@
 	//		add an object in the scene
 	//////////////////////////////////////////////////////////////////////////////////
 
+	/*
 	// add a simple box
 	var geometry	= new THREE.BoxGeometry(1,1,1);
 	var material	= new THREE.MeshNormalMaterial({
@@ -218,6 +221,28 @@
 	onRenderFcts.push(function(delta){
 		mesh.rotation.x += Math.PI*delta
 	})
+	*/
+	var threeGLTFLoader = new THREE.GLTFLoader();
+    var model;
+
+    threeGLTFLoader.load("./resources/Flamingo.glb", function (gltf) {
+        model = gltf.scene.children[0];
+        model.name = 'Flamingo';
+
+        //var animation = gltf.animations[0];
+        //var mixer = new THREE.AnimationMixer(model);
+        //mixers.push(mixer);
+        //var action = mixer.clipAction(animation);
+        //action.play();
+
+        //root.matrixAutoUpdate = false;
+        scene.add(model);
+
+        model.position.z = -200;
+        model.position.x = 100;
+        model.position.y = 100;
+        //model.rotation.x = -60;
+    }
 
 	//////////////////////////////////////////////////////////////////////////////////
 	//		render the whole thing on the page
