--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -91,7 +91,7 @@
 
         // var light = new THREE.AmbientLight(0xffffff);
         // scene.add(light);
-        const ambient = new THREE.AmbientLight( 0x666666 );
+        const ambient = new THREE.AmbientLight( 0xffffff );
         scene.add( ambient );
         const directionalLight = new THREE.DirectionalLight( 0x887766 );
         directionalLight.position.set( - 1, 1, 1 ).normalize();
@@ -165,8 +165,8 @@
 
         scene.visible = false
 
-        var root = new THREE.Object3D();
-        scene.add(root);
+        //var root = new THREE.Object3D();
+        //scene.add(root);
 
         //////////////////////////////////////////////////////////////////////////////////
         //		add an object in the scene
@@ -185,8 +185,9 @@
             //var action = mixer.clipAction(animation);
             //action.play();
 
-            root.matrixAutoUpdate = false;
-            root.add(model);
+            //root.matrixAutoUpdate = false;
+            //root.add(model);
+            scene.add(model);
 
             model.position.z = -200;
             model.position.x = 100;
