--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -160,13 +160,17 @@
         var markerControls = new THREEx.ArMarkerControls(arToolkitContext, camera, {
             type : 'nft',
             descriptorsUrl : 'data/dataNFT/pinball',
-            changeMatrixMode: 'cameraTransformMatrix'
+            changeMatrixMode: 'cameraTransformMatrix',
+            smooth: true,
+            smoothCount: 10,
+            smoothTolerance: 0.01,
+            smoothThreshold: 5
         })
 
         scene.visible = false
 
-        //var root = new THREE.Object3D();
-        //scene.add(root);
+        var root = new THREE.Object3D();
+        scene.add(root);
 
         //////////////////////////////////////////////////////////////////////////////////
         //		add an object in the scene
@@ -185,9 +189,8 @@
             //var action = mixer.clipAction(animation);
             //action.play();
 
-            //root.matrixAutoUpdate = false;
-            //root.add(model);
-            scene.add(model);
+            root.matrixAutoUpdate = false;
+            root.add(model);
 
             model.position.z = -200;
             model.position.x = 100;
