--- a/three.js/examples/minimal_ES6.html
+++ b/three.js/examples/minimal_ES6.html
@@ -6,7 +6,8 @@
 <!-- three.js load GLTF -->
 <script src='vendor/three.js/GLTFLoader.js'></script>
 <!-- ar.js -->
-<script src="../build/ar-threex.js"></script>
+<!-- <script src="../build/ar-threex.js"></script> -->
+<script src='../build/ar-threex-nft.js'></script>
 <script>THREEx.ArToolkitContext.baseURL = '../'</script>
 
 <body style='font-family: Monospace;'><div style='position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
