--- a/three.js/examples/minimal_ES6.html
+++ b/three.js/examples/minimal_ES6.html
@@ -82,6 +82,7 @@
         // CONTEXT
         arToolkitContext = new THREEx.ArToolkitContext({
             //cameraParametersUrl: cameraParam,
+            cameraParametersUrl: 'data/data/camera_para.dat',
             detectionMode: 'mono',//detectionMode: 'mono_and_matrix',
             //matrixCodeType: '3x3',
             //patternRatio: 0.5,
@@ -206,7 +207,7 @@
 	//		add an object in the scene
 	//////////////////////////////////////////////////////////////////////////////////
 
-/*
+
 	// add a simple box
 	var geometry	= new THREE.BoxGeometry(1,1,1);
 	var material	= new THREE.MeshNormalMaterial({
@@ -228,7 +229,7 @@
 	onRenderFcts.push(function(delta){
 		mesh.rotation.x += Math.PI*delta
 	})
-*/	
+
 	var threeGLTFLoader = new THREE.GLTFLoader();
     var model;
 
