--- a/three.js/examples/minimal_ES6.html
+++ b/three.js/examples/minimal_ES6.html
@@ -61,7 +61,7 @@
         sourceHeight: window.innerWidth > window.innerHeight ? 480 : 640,
 	})
 
-    arToolkitSource.init(function onReady() {
+    arToolkitSource.init(() => {
         arToolkitSource.domElement.addEventListener('canplay', () => {
             console.log(
                 'canplay',
