--- a/three.js/examples/nft1.html
+++ b/three.js/examples/nft1.html
@@ -61,7 +61,7 @@
 
         var renderer = new THREE.WebGLRenderer({
             //antialias: true,
-            //alpha: true,
+            alpha: true,
             precision: 'mediump',
             logarithmicDepthBuffer: true,
         });
