--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -60,10 +60,10 @@
         //////////////////////////////////////////////////////////////////////////////////
 
         var renderer = new THREE.WebGLRenderer({
-            //antialias: true,
+            antialias: true,
             alpha: true,
             precision: 'mediump',
-            logarithmicDepthBuffer: true,
+            //logarithmicDepthBuffer: true,
         });
 
         var clock = new THREE.Clock();
@@ -142,7 +142,7 @@
             detectionMode: 'mono',
             canvasWidth: 480,
             canvasHeight: 640,
-            imageSmoothingEnabled : true,
+            //imageSmoothingEnabled : true,
         })
 
         // initialize it
@@ -160,10 +160,10 @@
             type : 'nft',
             descriptorsUrl : 'data/dataNFT/pinball',
             changeMatrixMode: 'cameraTransformMatrix',
-            smooth: true,
-            smoothCount: 10,
-            smoothTolerance: 0.01,
-            smoothThreshold: 5
+            //smooth: true,
+            //smoothCount: 10,
+            //smoothTolerance: 0.01,
+            //smoothThreshold: 5
         })
 
         scene.visible = false
