--- a/three.js/examples/nft1.html
+++ b/three.js/examples/nft1.html
@@ -88,8 +88,8 @@
         //////////////////////////////////////////////////////////////////////////////////
 
         // Create a camera
-        // var camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 2000 );
-        var camera = new THREE.Camera();
+        var camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 2000 );
+        // var camera = new THREE.Camera();
         scene.add(camera);
 
         // var light = new THREE.AmbientLight(0xffffff);
