--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -142,7 +142,7 @@
         // create atToolkitContext
         var arToolkitContext = new THREEx.ArToolkitContext({
             detectionMode: 'mono',
-            imageSmoothingEnabled : true,
+            // imageSmoothingEnabled : true,
             canvasWidth: 480,
             canvasHeight: 640,
         })
