--- a/three.js/examples/nft1.html
+++ b/three.js/examples/nft1.html
@@ -63,8 +63,8 @@
             antialias: true,
             alpha: true,
             precision: 'mediump',
-            depth: true,
-            logarithmicDepthBuffer: true,
+            // depth: true,
+            // logarithmicDepthBuffer: true,
         });
 
         var clock = new THREE.Clock();
@@ -142,9 +142,9 @@
         // create atToolkitContext
         var arToolkitContext = new THREEx.ArToolkitContext({
             detectionMode: 'mono',
+            // imageSmoothingEnabled : true,
             canvasWidth: 480,
             canvasHeight: 640,
-            // imageSmoothingEnabled : true,
         })
 
         // initialize it
@@ -162,10 +162,10 @@
             type : 'nft',
             descriptorsUrl : 'data/dataNFT/pinball',
             changeMatrixMode: 'cameraTransformMatrix',
-            //smooth: true,
-            //smoothCount: 10,
-            //smoothTolerance: 0.01,
-            //smoothThreshold: 5
+            smooth: true,
+            smoothCount: 10,
+            smoothTolerance: 0.01,
+            smoothThreshold: 5
         })
 
         scene.visible = false
