--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -64,7 +64,7 @@
             alpha: true,
             precision: 'mediump',
             depth: true,
-            logarithmicDepthBuffer: true,
+            // logarithmicDepthBuffer: true,
         });
 
         var clock = new THREE.Clock();
@@ -165,7 +165,7 @@
             smooth: true,
             smoothCount: 10,
             smoothTolerance: 0.01,
-            smoothThreshold: 5
+            smoothThreshold: 2
         })
 
         scene.visible = false
