--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -63,8 +63,8 @@
             antialias: true,
             alpha: true,
             precision: 'mediump',
-            depth: true,
-            // logarithmicDepthBuffer: true,
+            // depth: true,
+            logarithmicDepthBuffer: true,
         });
 
         var clock = new THREE.Clock();
@@ -142,9 +142,12 @@
         // create atToolkitContext
         var arToolkitContext = new THREEx.ArToolkitContext({
             detectionMode: 'mono',
-            // imageSmoothingEnabled : true,
+            imageSmoothingEnabled : true,
             canvasWidth: 480,
             canvasHeight: 640,
+        }, {
+            sourceWidth: 480,
+            sourceHeight: 640,
         })
 
         // initialize it
