--- a/three.js/examples/nft1.html
+++ b/three.js/examples/nft1.html
@@ -165,10 +165,10 @@
             type : 'nft',
             descriptorsUrl : 'data/dataNFT/pinball',
             changeMatrixMode: 'cameraTransformMatrix',
-            smooth: true,
-            smoothCount: 40,
-            smoothTolerance: 0.02,
-            smoothThreshold: 10
+            //smooth: true,
+            //smoothCount: 40,
+            //smoothTolerance: 0.02,
+            //smoothThreshold: 10
         })
 
         scene.visible = false
