--- a/three.js/examples/nft1.html
+++ b/three.js/examples/nft1.html
@@ -164,17 +164,22 @@
         var markerControls = new THREEx.ArMarkerControls(arToolkitContext, camera, {
             type : 'nft',
             descriptorsUrl : 'data/dataNFT/pinball',
-            changeMatrixMode: 'cameraTransformMatrix',
-            //smooth: true,
-            //smoothCount: 40,
-            //smoothTolerance: 0.02,
-            //smoothThreshold: 10
+            //changeMatrixMode: 'cameraTransformMatrix',
+            changeMatrixMode: 'modelViewMatrix',
+            smooth: true,
+            smoothCount: 10,
+            smoothTolerance: 0.01,
+            smoothThreshold: 5
         })
 
-        scene.visible = false
+        // scene.visible = false
 
-        var root = new THREE.Object3D();
-        scene.add(root);
+        //var root = new THREE.Object3D();
+        //scene.add(root);
+        
+        // add helper
+        var axesHelper = new THREE.AxesHelper(100);
+        scene.add(axesHelper);
 
         //////////////////////////////////////////////////////////////////////////////////
         //		add an object in the scene
@@ -187,14 +192,15 @@
             model = gltf.scene.children[0];
             model.name = 'Flamingo';
 
-            //var animation = gltf.animations[0];
-            //var mixer = new THREE.AnimationMixer(model);
-            //mixers.push(mixer);
-            //var action = mixer.clipAction(animation);
-            //action.play();
+            var animation = gltf.animations[0];
+            var mixer = new THREE.AnimationMixer(model);
+            mixers.push(mixer);
+            var action = mixer.clipAction(animation);
+            action.play();
 
-            root.matrixAutoUpdate = false;
-            root.add(model);
+            //root.matrixAutoUpdate = false;
+            //root.add(model);
+            scene.add(model);
 
             model.position.z = -200;
             model.position.x = 100;
@@ -222,7 +228,7 @@
                 arToolkitContext.update( arToolkitSource.domElement )
 
                 // update scene.visible if the marker is seen
-                scene.visible = camera.visible;
+                // scene.visible = camera.visible;
 
                 renderer.render(scene, camera);
             };
