--- a/three.js/examples/nft2.html
+++ b/three.js/examples/nft2.html
@@ -173,7 +173,7 @@
             smoothThreshold: 5
         })
 
-        scene.visible = false
+        // scene.visible = false
 
         //var root = new THREE.Object3D();
         //scene.add(root);
@@ -229,7 +229,7 @@
                 arToolkitContext.update( arToolkitSource.domElement )
 
                 // update scene.visible if the marker is seen
-                scene.visible = camera.visible;
+                // scene.visible = camera.visible;
 
                 renderer.render(scene, camera);
             };
