--- a/aframe/examples/image-tracking/nft/index1.html
+++ b/aframe/examples/image-tracking/nft/index1.html
@@ -26,27 +26,29 @@
 
 <body style='margin : 0px; overflow: hidden;'>
   <div id="app">
-    <!-- minimal loader shown until image descriptors are loaded -->
-    <div class="arjs-loader">
-      <div>Loading, please wait...</div>
-    </div>
-    <a-scene
-        vr-mode-ui='enabled: false;'
-        renderer="logarithmicDepthBuffer: true; precision: medium;"
-        embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
+  	<div>
+	    <!-- minimal loader shown until image descriptors are loaded -->
+	    <div class="arjs-loader">
+	      <div>Loading, please wait...</div>
+	    </div>
+	    <a-scene
+	        vr-mode-ui='enabled: false;'
+	        renderer="logarithmicDepthBuffer: true; precision: medium;"
+	        embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
-        <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
-        <a-nft
-            type='nft' url='./data/dataNFT/pinball'
-            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
-            <a-entity
-                gltf-model='./Flamingo.glb'
-                scale="1 1 1"
-                position="100 100 -200"
-                >
-            </a-entity>
-        </a-nft>
-		<a-entity camera></a-entity>
-    </a-scene>
+	        <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
+	        <a-nft
+	            type='nft' url='./data/dataNFT/pinball'
+	            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
+	            <a-entity
+	                gltf-model='./Flamingo.glb'
+	                scale="1 1 1"
+	                position="100 100 -200"
+	                >
+	            </a-entity>
+	        </a-nft>
+			<a-entity camera></a-entity>
+	    </a-scene>
+  	</div>
   </div>
 </body>
