--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -163,7 +163,8 @@
         // init controls for camera
         var markerControls = new THREEx.ArMarkerControls(arToolkitContext, camera, {
             type : 'nft',
-            descriptorsUrl : 'data/dataNFT/pinball',
+            descriptorsUrl : 'data/dataNFT/coco',
+            //descriptorsUrl : 'data/dataNFT/pinball',
             changeMatrixMode: 'cameraTransformMatrix',
             smooth: true,
             smoothCount: 10,
