--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -162,8 +162,19 @@
             type : 'nft',
             descriptorsUrl : 'data/dataNFT/coco',
             //descriptorsUrl : 'data/dataNFT/pinball',
-            //changeMatrixMode: 'cameraTransformMatrix',
-            changeMatrixMode: 'modelViewMatrix',
+            changeMatrixMode: 'cameraTransformMatrix',
+            //changeMatrixMode: 'modelViewMatrix',
+            smooth: true,
+            smoothCount: 10,
+            smoothTolerance: 0.01,
+            smoothThreshold: 5
+        })
+        
+        var markerControls = new THREEx.ArMarkerControls(arToolkitContext, camera, {
+            type : 'nft',
+            descriptorsUrl : 'data/dataNFT/pinball',
+            changeMatrixMode: 'cameraTransformMatrix',
+            //changeMatrixMode: 'modelViewMatrix',
             smooth: true,
             smoothCount: 10,
             smoothTolerance: 0.01,
