--- a/three.js/examples/nft.html
+++ b/three.js/examples/nft.html
@@ -170,7 +170,7 @@
             smoothThreshold: 5
         })
         
-        var markerControls = new THREEx.ArMarkerControls(arToolkitContext, camera, {
+        var markerControls2 = new THREEx.ArMarkerControls(arToolkitContext, camera, {
             type : 'nft',
             descriptorsUrl : 'data/dataNFT/pinball',
             changeMatrixMode: 'cameraTransformMatrix',
