--- a/static/three.js/examples/measure-it.html
+++ b/static/three.js/examples/measure-it.html
@@ -4,7 +4,7 @@
 <script src='vendor/three.js/build/three.js'></script>
 <!-- include threex.artoolkit -->
 <script src="../build/ar-threex.js"></script>
-<script>THREEx.ArToolkitContext.baseURL = '../'</script>
+<script>THREEx.ArToolkitContext.baseURL = '../../'</script>
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
 	<a href="https://github.com/AR-js-org/AR.js/" target="_blank">AR.js</a> - Measure the distance between 2 markers - hiro and kanji
