test mindar letter

--- a/static/examples/mindar2.html
+++ b/static/examples/mindar2.html
@@ -6,9 +6,9 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.2/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ../image-tracking/nft/map/map2.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: ../image-tracking/nft/letter/letterA.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card" src="../image-tracking/nft/map/map2.jpg" />
+        <img id="card" src="../image-tracking/nft/letter/pattern-letterA.png" />
         <a-asset-item id="avatarModel" src="../models/european_buildings_asset_pack_3/scene.gltf"></a-asset-item>
       </a-assets>
 
