--- a/static/examples/mindar2.html
+++ b/static/examples/mindar2.html
@@ -6,16 +6,16 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.2/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ../image-tracking/nft/letter/letterA.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: ../image-tracking/nft/building/building.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card" src="../image-tracking/nft/letter/pattern-letterA.png" />
+        <img id="card" src="../image-tracking/nft/building/building1.jpg" />
         <a-asset-item id="avatarModel" src="../models/european_buildings_asset_pack_3/scene.gltf"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane src="#card" position="0 0 0" height="0.715" width="1" rotation="0 0 0"></a-plane>
+        <a-plane src="#card" position="0 0 0" height="0.673" width="1" rotation="0 0 0"></a-plane>
         <a-gltf-model rotation="90 0 0 " position="-0.2 0 0" scale="0.006 0.006 0.006" src="#avatarModel"
         >
       </a-entity>
