update test puzzle web

--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.5441d.js" charset="utf-8"></script>
+<script src="src/settings.e4d16.js" charset="utf-8"></script>
 
-<script src="main.4e8fc.js" charset="utf-8"></script>
+<script src="main.0355d.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 // Get url params
@@ -91,7 +91,7 @@ function GetRequest() {
 		localStorage.setItem("paramJson", obj);
 	} else {
 		console.log("无透传参数");
- 		localStorage.setItem("paramJson", null);
+ 		localStorage.setItem("paramJson", '');
 	}
 
     // open web debugger console
