--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | Puzzle</title>
+  <title>Puzzle09202024</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.37cea.js" charset="utf-8"></script>
+<script src="src/settings.f283c.js" charset="utf-8"></script>
 
-<script src="main.cb3af.js" charset="utf-8"></script>
+<script src="main.d6987.js" charset="utf-8"></script>
 
 <!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>-->
 <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
@@ -113,7 +113,7 @@ function GetRequest() {
 		console.log("no param");
  		localStorage.removeItem("puzzleGameParam");
 	}
-
+	
     // open web debugger console
     if (typeof VConsole !== 'undefined') {
         window.vConsole = new VConsole();
