--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Puzzle09212106</title>
+  <title>Puzzle09212211</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.eb648.js" charset="utf-8"></script>
+<script src="src/settings.7523b.js" charset="utf-8"></script>
 
-<script src="main.14a0a.js" charset="utf-8"></script>
+<script src="main.09459.js" charset="utf-8"></script>
 
 <!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>-->
 <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
