--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Puzzle09212211</title>
+  <title>Puzzle09261632</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -48,11 +48,10 @@
     </div>
   </div>
 
-<script src="src/settings.7523b.js" charset="utf-8"></script>
+<script src="src/settings.2f1ca.js" charset="utf-8"></script>
 
-<script src="main.09459.js" charset="utf-8"></script>
+<script src="main.bf91e.js" charset="utf-8"></script>
 
-<!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>-->
 <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
 
 <script type="text/javascript">
@@ -66,7 +65,6 @@ function GetMainUrl(){
 }
 function GetRequest() {  
    var url = location.search; //获取url中包含"?"符以及其后的字串 
-   var theRequest = new Object();
    if (url.indexOf("?") != -1) {
       	var str = url.substr(1);
       	var arr = str.split("&");
