update web test

--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Puzzle09261632</title>
+  <title>Puzzle09271438</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.2f1ca.js" charset="utf-8"></script>
+<script src="src/settings.a93bd.js" charset="utf-8"></script>
 
-<script src="main.bf91e.js" charset="utf-8"></script>
+<script src="main.ac3ca.js" charset="utf-8"></script>
 
 <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
 
