--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Puzzle09271536</title>
+  <title>Puzzle09271555</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -92,21 +92,6 @@ function GetRequest() {
 		var paramStr = JSON.stringify(obj);
 		console.log("param:" + paramStr);
 		localStorage.setItem("puzzleGameParam", paramStr);
-		/*
-		// Using JSSDK
-		if(typeof(wx)!="undefined" && obj.appId != null){ 
-            wx.config({
-			  debug: true, // 开启调试模式,调用的所有 api 的返回值会在客户端 alert 出来，若要查看传入的参数，可以在 pc 端打开，参数信息会通过 log 打出，仅在 pc 端时才会打印。
-			  appId: obj.appId, // 必填，公众号的唯一标识
-			  timestamp: obj.timestamp, // 必填，生成签名的时间戳
-			  nonceStr: obj.nonceStr, // 必填，生成签名的随机串
-			  signature: obj.signature,// 必填，签名
-			  jsApiList: [
-			  	"checkJSApi",
-			  ] // 必填，需要使用的 JS 接口列表
-			});
-        }
-        */
 	} else {
 		console.log("no param");
  		localStorage.removeItem("puzzleGameParam");
@@ -134,7 +119,7 @@ function GetRequest() {
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.40150.js', function () {
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.13c2a.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
         loadScript(debug ? 'physics.js' : 'physics-min.js', window.boot);
       }
